--- a/rider-core/src/test/resources/datasets/yml/users.yml
+++ b/rider-core/src/test/resources/datasets/yml/users.yml
@@ -1,14 +1,14 @@
-user:
-  - id: 1
-    name: "@realpestano"
-  - id: 2
-    name: "@dbunit"
-tweet:
-  - id: abcdef12345
-    content: "dbunit rules!"
-    date: "[DAY,NOW]"
-    user_id: 1
-follower:
-  - id: 1
-    user_id: 1
-    follower_id: 2
+USER:
+  - ID: 1
+    NAME: "@realpestano"
+  - ID: 2
+    NAME: "@dbunit"
+TWEET:
+  - ID: abcdef12345
+    CONTENT: "dbunit rules!"
+    DATE: "[DAY,NOW]"
+    USER_ID: 1
+FOLLOWER:
+  - ID: 1
+    USER_ID: 1
+    FOLLOWER_ID: 2
