--- a/rider-core/src/test/resources/datasets/yml/expectedUsers.yml
+++ b/rider-core/src/test/resources/datasets/yml/expectedUsers.yml
@@ -1,5 +1,5 @@
-user:
-  - id: 1
-    name: "expected user1"
-  - id: 2
-    name: "expected user2"
+USER:
+  - ID: 1
+    NAME: "expected user1"
+  - ID: 2
+    NAME: "expected user2"
