--- a/rider-core/src/test/resources/datasets/yml/groovy-with-date-replacements.yml
+++ b/rider-core/src/test/resources/datasets/yml/groovy-with-date-replacements.yml
@@ -1,5 +1,5 @@
-tweet:
-  - id: "1"
-    content: "dbunit rules!"
-    date: "groovy:new Date()" #<1>
-    user_id: 1
+TWEET:
+  - ID: "1"
+    CONTENT: "dbunit rules!"
+    DATE: "groovy:new Date()" #<1>
+    USER_ID: 1
