--- a/rider-core/src/test/resources/datasets/yml/js-with-calc-replacements.yml
+++ b/rider-core/src/test/resources/datasets/yml/js-with-calc-replacements.yml
@@ -1,5 +1,5 @@
-tweet:
-  - id: "1"
-    content: "dbunit rules!"
-    likes: "js:(5+5)*10/2" #<1>
-    user_id: 1
+TWEET:
+  - ID: "1"
+    CONTENT: "dbunit rules!"
+    LIKES: "js:(5+5)*10/2" #<1>
+    USER_ID: 1
