--- a/rider-core/src/test/resources/datasets/yml/js-with-date-replacements.yml
+++ b/rider-core/src/test/resources/datasets/yml/js-with-date-replacements.yml
@@ -1,5 +1,5 @@
-tweet:
-  - id: "1"
-    content: "dbunit rules!"
-    date: "js:var d = new Date(); var datestring = d.getFullYear()  + '-' + (d.getMonth()+1) + '-' + d.getDate() + ' ' + d.getHours() + ':' + d.getMinutes() + ':' + d.getSeconds();datestring.toString()"
-    user_id: 1
+TWEET:
+  - ID: "1"
+    CONTENT: "dbunit rules!"
+    DATE: "js:var d = new Date(); var datestring = d.getFullYear()  + '-' + (d.getMonth()+1) + '-' + d.getDate() + ' ' + d.getHours() + ':' + d.getMinutes() + ':' + d.getSeconds();datestring.toString()"
+    USER_ID: 1
