--- a/rider-core/src/test/resources/datasets/yml/tweet.yml
+++ b/rider-core/src/test/resources/datasets/yml/tweet.yml
@@ -1,4 +1,4 @@
-tweet:
-  - id: abcdef12345
-    content: "dbunit rules again!"
-    user_id: 1
+TWEET:
+  - ID: abcdef12345
+    CONTENT: "dbunit rules again!"
+    USER_ID: 1
