--- a/rider-cdi/src/test/resources/datasets/yml/users.yml
+++ b/rider-cdi/src/test/resources/datasets/yml/users.yml
@@ -1,19 +1,19 @@
-user:
-  - id: 1
-    name: "@realpestano"
-  - id: 2
-    name: "@dbunit"
-tweet:
-  - id: abcdef12345
-    content: "dbunit rules!"
-    user_id: 1
-  - id: abcdef12233
-    content: "dbunit rules!"
-    user_id: 2
-  - id: abcdef1343
-    content: "CDI for the win!"
-    user_id: 2
-follower:
-  - id: 1
-    user_id: 1
-    follower_id: 2
+USER:
+  - ID: 1
+    NAME: "@realpestano"
+  - ID: 2
+    NAME: "@dbunit"
+TWEET:
+  - ID: abcdef12345
+    CONTENT: "dbunit rules!"
+    USER_ID: 1
+  - ID: abcdef12233
+    CONTENT: "dbunit rules!"
+    USER_ID: 2
+  - ID: abcdef1343
+    CONTENT: "CDI for the win!"
+    USER_ID: 2
+FOLLOWER:
+  - ID: 1
+    USER_ID: 1
+    FOLLOWER_ID: 2
