--- a/rider-examples/dbunit-tomee-appcomposer-sample/src/test/resources/datasets/users.yml
+++ b/rider-examples/dbunit-tomee-appcomposer-sample/src/test/resources/datasets/users.yml
@@ -1,5 +1,5 @@
-user:
-  - id: 1
-    name: John Smith
-  - id: 2
-    name: Clark Kent
+USER:
+  - ID: 1
+    NAME: John Smith
+  - ID: 2
+    NAME: Clark Kent
