--- a/rider-examples/jOOQ-DBUnit-flyway-example/src/test/resources/datasets/books.yml
+++ b/rider-examples/jOOQ-DBUnit-flyway-example/src/test/resources/datasets/books.yml
@@ -1,13 +1,13 @@
-flyway_test.book:
-  - id: 1
-    author_id: 1
-    title: "1984"
-  - id: 2
-    author_id: 1
-    title: Animal Farm
-  - id: 3
-    author_id: 2
-    title: O Alquimista
-  - id: 4
-    author_id: 2
-    title: Brida
+FLYWAY_TEST.BOOK:
+  - ID: 1
+    AUTHOR_ID: 1
+    TITLE: "1984"
+  - ID: 2
+    AUTHOR_ID: 1
+    TITLE: Animal Farm
+  - ID: 3
+    AUTHOR_ID: 2
+    TITLE: O Alquimista
+  - ID: 4
+    AUTHOR_ID: 2
+    TITLE: Brida
