--- a/rider-examples/jOOQ-DBUnit-flyway-example/src/test/resources/datasets/expected_authors.yml
+++ b/rider-examples/jOOQ-DBUnit-flyway-example/src/test/resources/datasets/expected_authors.yml
@@ -1,13 +1,13 @@
-flyway_test.author:
-  - id: "regex:\\d+"
-    first_name: Erich
-    last_name: Gamma
-    date_of_birth: "1903-06-25"
-    year_of_birth: 1900
-    address: null
-  - id: "regex:\\d+"
-    first_name: Richard
-    last_name: Helm
-    date_of_birth: regex:^(?:[0-9]{2})?[0-9]{2}-[0-3]?[0-9]-[0-3]?[0-9]$
-    year_of_birth: 1900
-    address: null
+FLYWAY_TEST.AUTHOR:
+  - ID: "regex:\\d+"
+    FIRST_NAME: Erich
+    LAST_NAME: Gamma
+    DATE_OF_BIRTH: "1903-06-25"
+    YEAR_OF_BIRTH: 1900
+    ADDRESS: null
+  - ID: "regex:\\d+"
+    FIRST_NAME: Richard
+    LAST_NAME: Helm
+    DATE_OF_BIRTH: regex:^(?:[0-9]{2})?[0-9]{2}-[0-3]?[0-9]-[0-3]?[0-9]$
+    YEAR_OF_BIRTH: 1900
+    ADDRESS: null
