--- a/rider-junit5/src/test/resources/datasets/users.yml
+++ b/rider-junit5/src/test/resources/datasets/users.yml
@@ -1,5 +1,5 @@
-user:
-  - id: 1
-    name: "@realpestano"
-  - id: 2
-    name: "@dbunit"
+USER:
+  - ID: 1
+    NAME: "@realpestano"
+  - ID: 2
+    NAME: "@dbunit"
