--- a/rider-junit5/src/test/resources/datasets/usersWithTweet.yml
+++ b/rider-junit5/src/test/resources/datasets/usersWithTweet.yml
@@ -1,10 +1,10 @@
-user:
-  - id: 1
-    name: "@realpestano"
-  - id: 2
-    name: "@dbunit"
-tweet:
-  - id: abcdef12345
-    content: "dbunit rules!"
-    date: "[DAY,NOW]"
-    user_id: 1
+USER:
+  - ID: 1
+    NAME: "@realpestano"
+  - ID: 2
+    NAME: "@dbunit"
+TWEET:
+  - ID: abcdef12345
+    CONTENT: "dbunit rules!"
+    DATE: "[DAY,NOW]"
+    USER_ID: 1
