--- a/rider-core/src/main/resources/default/dbunit.yml
+++ b/rider-core/src/main/resources/default/dbunit.yml
@@ -5,8 +5,8 @@ properties:
   batchedStatements:  false
   qualifiedTableNames: false
   caseSensitiveTableNames: false
-# see com.github.database.rider.core.api.configuration.LetterCase
-  caseInsensitiveStrategy: "UPPER"
+# see com.github.database.rider.core.api.configuration.Orthography
+  caseInsensitiveStrategy: "UPPERCASE"
   batchSize: 100
   fetchSize: 100
   allowEmptyFields: false
