--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <artifactId>rider-parent</artifactId>
     <packaging>pom</packaging>
    <!-- tag::version[] -->
-   <version>1.1.0</version>
+   <version>1.2.0-SNAPSHOT</version>
    <!-- end::version[] -->
 
     <modules>
