--- a/rider-junit5/pom.xml
+++ b/rider-junit5/pom.xml
@@ -6,8 +6,12 @@
         <version>1.2.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
     <artifactId>rider-junit5</artifactId>
+
+    <properties>
+        <version.junit-platform>1.0.0-RC3</version.junit-platform>
+        <version.junit-jupiter>5.0.0-RC3</version.junit-jupiter>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>com.github.database-rider</groupId>
@@ -19,7 +23,7 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
-            <version>5.0.0-RC2</version>
+            <version>${version.junit-jupiter}</version>
             <!-- for writing tests "test" scope would suffice,
                 but extensions are defined in the project's "main" folder, so we need "compile" -->
             <scope>compile</scope>
@@ -29,7 +33,7 @@
         <dependency>
             <groupId>org.junit.platform</groupId>
             <artifactId>junit-platform-commons</artifactId>
-            <version>1.0.0-RC2</version>
+            <version>${version.junit-platform}</version>
             <scope>compile</scope>
         </dependency>
 
@@ -38,14 +42,14 @@
             <!-- contains the engine that actually runs the Jupiter-tests -->
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.0.0-RC2</version>
+            <version>${version.junit-jupiter}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <!-- contains the runner that adapts Jupiter-tests for a v4-run -->
             <groupId>org.junit.platform</groupId>
             <artifactId>junit-platform-runner</artifactId>
-            <version>1.0.0-RC2</version>
+            <version>${version.junit-platform}</version>
             <scope>test</scope>
         </dependency>
 
