--- a/rider-junit5/pom.xml
+++ b/rider-junit5/pom.xml
@@ -9,8 +9,8 @@
     <artifactId>rider-junit5</artifactId>
 
     <properties>
-        <version.junit-platform>1.0.0-RC3</version.junit-platform>
-        <version.junit-jupiter>5.0.0-RC3</version.junit-jupiter>
+        <version.junit-platform>1.0.0</version.junit-platform>
+        <version.junit-jupiter>5.0.0</version.junit-jupiter>
     </properties>
     <dependencies>
         <dependency>
