--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <artifactId>rider-parent</artifactId>
     <packaging>pom</packaging>
    <!-- tag::version[] -->
-   <version>1.2.2-SNAPSHOT</version>
+   <version>1.2.2</version>
    <!-- end::version[] -->
 
     <modules>
@@ -50,7 +50,8 @@
         <connection>scm:git:https://github.com/database-rider/database-rider.git</connection>
         <developerConnection>scm:git:git@github.com:database-rider/database-rider.git</developerConnection>
         <url>https://github.com/database-rider/database-rider.git</url>
-    </scm>
+      <tag>1.2.2</tag>
+  </scm>
 
     <ciManagement>
         <system>tranvis-ci.org</system>
