--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_script:
 - git config --global user.email rmpestano@gmail.com
 script:
 - mvn clean install jacoco:report coveralls:report -Pcoverage surefire-report:report-only
-- cd rider-core && mvn -q cukedoctor:execute scm-publish:publish-scm -Pdocs
+- cd rider-core && mvn -q cukedoctor:execute scm-publish:publish-scm -Pdocs -Prelease
 after_script:
 - cd .. && python html2text.py target/site/surefire-report.html
 - mvn deploy --settings settings.xml -DskipTests=true
