+ issue #53: No algorithm found for <XYZ> in ScriptableTable, added test, added mockito test depedency in rider-core

--- a/rider-core/pom.xml
+++ b/rider-core/pom.xml
@@ -62,7 +62,13 @@
             <version>2.4.6</version>
             <scope>test</scope>
         </dependency>
-
+        
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>2.2.28</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
