--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <artifactId>rider-parent</artifactId>
     <packaging>pom</packaging>
    <!-- tag::version[] -->
-   <version>1.2.5</version>
+   <version>1.2.6-SNAPSHOT</version>
    <!-- end::version[] -->
 
     <modules>
@@ -50,7 +50,7 @@
         <connection>scm:git:https://github.com/database-rider/database-rider.git</connection>
         <developerConnection>scm:git:git@github.com:database-rider/database-rider.git</developerConnection>
         <url>https://github.com/database-rider/database-rider.git</url>
-      <tag>1.2.5</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <ciManagement>
