--- a/rider-spring/src/test/resources/logging.properties
+++ b/rider-spring/src/test/resources/logging.properties
@@ -1,4 +1,4 @@
 handlers=java.util.logging.ConsoleHandler
 java.util.logging.ConsoleHandler.formatter=java.util.logging.SimpleFormatter
-com.github.dbunit.rules.level=FINE
+com.github.database.rider.level=FINE
 
