--- a/rider-core/src/test/resources/config/sample-dbunit.yml
+++ b/rider-core/src/test/resources/config/sample-dbunit.yml
@@ -8,3 +8,4 @@ properties:
   fetchSize: 200
   allowEmptyFields: true
   escapePattern: "[?]"
+  datatypeFactory: !!com.github.database.rider.core.configuration.DBUnitConfigTest$MockDataTypeFactory {}
