--- a/rider-cdi/pom.xml
+++ b/rider-cdi/pom.xml
@@ -4,7 +4,7 @@
         <groupId>com.github.database-rider</groupId>
         <artifactId>rider-parent</artifactId>
    <!-- tag::version[] -->
-   <version>1.2.9</version>
+   <version>1.2.10-SNAPSHOT</version>
    <!-- end::version[] -->
     </parent>
     <modelVersion>4.0.0</modelVersion>
