--- a/rider-examples/jOOQ-DBUnit-flyway-example/pom.xml
+++ b/rider-examples/jOOQ-DBUnit-flyway-example/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.github.database-rider</groupId>
         <artifactId>rider-examples</artifactId>
-        <version>1.2.9</version>
+        <version>1.2.10-SNAPSHOT</version>
     </parent>
 
     <artifactId>jooq-dbunit-flyway-example</artifactId>
