test conditional script

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,8 @@ before_script:
 - git config --global user.email rmpestano@gmail.com
 script:
 - mvn clean install jacoco:report coveralls:report -Pcoverage surefire-report:report-only
-- cd rider-core && mvn -q cukedoctor:execute scm-publish:publish-scm -Pdocs -Prelease
+- cd rider-core && mvn -q cukedoctor:execute scm-publish:publish-scm -Pdocs 
+- if [[ $TRAVIS_COMMIT_MESSAGE == *"prepare release"* ]]; then mvn -q scm-publish:publish-scm -Pdocs -Prelease ; fi ;
 after_script:
 - cd .. && python html2text.py target/site/surefire-report.html
 - mvn deploy --settings settings.xml -DskipTests=true
