--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,9 @@
     <groupId>com.github.database-rider</groupId>
     <artifactId>rider-parent</artifactId>
     <packaging>pom</packaging>
-   <!-- tag::version[] -->
-   <version>1.2.12-SNAPSHOT</version>
-   <!-- end::version[] -->
+    <!-- tag::version[] -->
+    <version>1.2.12-SNAPSHOT</version>
+    <!-- end::version[] -->
 
     <modules>
         <module>rider-core</module>
@@ -51,8 +51,8 @@
         <connection>scm:git:https://github.com/database-rider/database-rider.git</connection>
         <developerConnection>scm:git:git@github.com:database-rider/database-rider.git</developerConnection>
         <url>https://github.com/database-rider/database-rider.git</url>
-      <tag>HEAD</tag>
-  </scm>
+        <tag>HEAD</tag>
+    </scm>
 
     <ciManagement>
         <system>tranvis-ci.org</system>
@@ -156,7 +156,7 @@
                     </systemPropertyVariables>
                 </configuration>
             </plugin>
-             <plugin>
+            <plugin>
                 <artifactId>maven-surefire-report-plugin</artifactId>
                 <version>2.19.1</version>
                 <configuration>
@@ -306,7 +306,7 @@
         <profile>
             <id>release</id>
             <properties>
-                 <docs.outputdir>docs/${project.version}</docs.outputdir>
+                <docs.outputdir>docs/${project.version}</docs.outputdir>
             </properties>
             <build>
                 <plugins>
@@ -340,14 +340,14 @@
                         </configuration>
                     </plugin>
 					
-					 <plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-jarsigner-plugin</artifactId>
-						<version>1.4</version>
-						<configuration>
-							<skip>true</skip>
-						</configuration>
-				    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-jarsigner-plugin</artifactId>
+                        <version>1.4</version>
+                        <configuration>
+                            <skip>true</skip>
+                        </configuration>
+                    </plugin>
                 </plugins>
             </build>
 
@@ -358,6 +358,27 @@
                 </repository>
             </distributionManagement>
         </profile>
+        
+        <profile>
+            <id>sonar</id>
+            <properties>
+                <sonar.surefire.reportsPath>${project.build.directory}/surefire-reports</sonar.surefire.reportsPath>
+                <sonar.jacoco.reportPath>${project.build.directory}/jacoco.exec</sonar.jacoco.reportPath>
+                <sonar.language>java</sonar.language>
+                <sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
+                <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
+            </properties>
+            
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.sonarsource.scanner.maven</groupId>
+                        <artifactId>sonar-maven-plugin</artifactId>
+                        <version>3.4.0.905</version>
+                    </plugin>
+                </plugins>
+            </build>    
+        </profile>   
 
     </profiles>
 
