--- a/pom.xml
+++ b/pom.xml
@@ -367,6 +367,7 @@
                 <sonar.language>java</sonar.language>
                 <sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
                 <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
+  		<sonar.exclusions>org/example/jpadomain/**/*, org/example/**/*, /**/models/*, **/*Repository.*, **/*UserController.*,**/*Contact*,**/*Tables.*</sonar.exclusions>
             </properties>
             
             <build>
