--- a/rider-core/src/test/resources/logging.properties
+++ b/rider-core/src/test/resources/logging.properties
@@ -3,5 +3,5 @@ handlers = java.util.logging.ConsoleHandler
 
 java.util.logging.ConsoleHandler.formatter=java.util.logging.SimpleFormatter
 
-com.github.database.rider.level=FINE
+#com.github.database.rider.level=FINE
 
