adjust travisci release build

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,6 @@ script:
 - mvn clean install jacoco:report coveralls:report -Pcoverage surefire-report:report-only && python html2text.py target/site/surefire-report.html
 - if [[ $TRAVIS_PULL_REQUEST == "false" ]] && [[ $TRAVIS_BRANCH == "master" ]]; then mvn sonar:sonar -Psonar -Dsonar.organization=database-rider -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=${SONAR_KEY} ; fi ;
 - if [[ $TRAVIS_PULL_REQUEST == "false" ]] && [[ $TRAVIS_BRANCH == "master" ]]; then cd rider-core && mvn -q cukedoctor:execute scm-publish:publish-scm -Pdocs ; fi ;
-- if [[ $TRAVIS_COMMIT_MESSAGE == *"prepare release"* ]]; then mvn -q cukedoctor:execute -Pdocs
-  scm-publish:publish-scm -Pdocs -Prelease ; fi ;
+- if [[ $TRAVIS_COMMIT_MESSAGE == *"prepare release"* ]]; then mvn -q cukedoctor:execute scm-publish:publish-scm -Pdocs -Prelease ; fi ;
 after_script:
 - if [[ $TRAVIS_PULL_REQUEST == "false" ]] && [[ $TRAVIS_BRANCH == "master" ]]; then cd ../ && mvn clean package deploy --settings settings.xml -DskipTests=true ; fi;
