--- a/rider-examples/quarkus-dbunit-sample/src/main/resources/application.properties
+++ b/rider-examples/quarkus-dbunit-sample/src/main/resources/application.properties
@@ -7,6 +7,7 @@ quarkus.datasource.password = h2g2
 quarkus.datasource.max-size=20
 quarkus.datasource.min-size=5
 
+
 quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.hibernate-orm.log.sql=false
 
@@ -26,9 +27,16 @@ quarkus.log.category."com.github".level=WARN
 %test.quarkus.datasource.url = jdbc:h2:mem:cdbookstoreDB
 %test.quarkus.datasource.driver = org.h2.Driver
 
+%test.quarkus.datasource.secondary.url = jdbc:h2:mem:cdbookstoreSecondaryDB
+%test.quarkus.datasource.secondary.driver = org.h2.Driver
+
 %test.quarkus.hibernate-orm.database.generation=drop-and-create
 %test.quarkus.hibernate-orm.log.sql=true
 %test.quarkus.hibernate-orm.sql-load-script = import-test.sql
+
+%test.quarkus.hibernate-orm.secondary.database.generation=drop-and-create
+%test.quarkus.hibernate-orm.secondary.log.sql=true
+%test.quarkus.hibernate-orm.secondary.sql-load-script = import-test.sql
 
 %test.quarkus.log.category."com.githubl".level=DEBUG
 
