--- a/rider-examples/spring-boot-dbunit-sample/src/main/resources/application.properties
+++ b/rider-examples/spring-boot-dbunit-sample/src/main/resources/application.properties
@@ -6,15 +6,19 @@
 
 server.port=8181
 
-spring.datasource.url = jdbc:hsqldb:mem:test;DB_CLOSE_DELAY=-1
+#user datasource
+user.datasource.url = jdbc:hsqldb:mem:user;DB_CLOSE_DELAY=-1
+user.datasource.username = sa
+user.datasource.password =
+user.datasource.testWhileIdle = true
+user.datasource.validationQuery = SELECT 1
 
-# Username and password
-spring.datasource.username = sa
-spring.datasource.password = 
-
-# Keep the connection alive if idle for a long time (needed in production)
-spring.datasource.testWhileIdle = true
-spring.datasource.validationQuery = SELECT 1
+#company datasource
+company.datasource.url = jdbc:hsqldb:mem:company;DB_CLOSE_DELAY=-1
+company.datasource.username = sa
+company.datasource.password =
+company.datasource.testWhileIdle = true
+company.datasource.validationQuery = SELECT 1
 
 # ===============================
 # = JPA / HIBERNATE
@@ -32,7 +36,7 @@ spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
 
 # Naming strategy
-spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
+spring.jpa.hibernate.naming.implicit-strategy = org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy
 
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.HSQLDialect
