fix quarkus maven plugin due to "Property quarkus.http.auth.form.landing-page not found " issue

--- a/rider-examples/quarkus-dbunit-sample/src/main/resources/application.properties
+++ b/rider-examples/quarkus-dbunit-sample/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 # GLOBAL
 isbn.prefix=1234
+quarkus.http.auth.form.landing-page=http://localhost:8080
 quarkus.datasource.url = jdbc:postgresql://localhost:5432/cdbookstoreDB
 quarkus.datasource.driver = org.postgresql.Driver
 quarkus.datasource.username = cdbookstoreDB
