--- a/rider-examples/quarkus-dbunit-sample/pom.xml
+++ b/rider-examples/quarkus-dbunit-sample/pom.xml
@@ -12,7 +12,7 @@
      <version>1.8.2-SNAPSHOT</version>
 
      <properties>
-        <quarkus.version>1.0.1.Final</quarkus.version>
+        <quarkus.version>1.1.0.CR1</quarkus.version>
         <surefire.version>2.22.0</surefire.version>
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -100,6 +100,7 @@
             <plugin>
                 <groupId>io.quarkus</groupId>
                 <artifactId>quarkus-bootstrap-maven-plugin</artifactId>
+                <version>${quarkus.version}</version>
             </plugin>
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
