refs #178 - Add support for @DataSet in BeforeEach and AfterEach callbacks

--- a/rider-examples/dbunit-tomee-appcomposer-sample/pom.xml
+++ b/rider-examples/dbunit-tomee-appcomposer-sample/pom.xml
@@ -38,6 +38,12 @@
             <version>${project.parent.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.glassfish.corba</groupId> <!-- jdk 11 support -->
+            <artifactId>glassfish-corba-omgapi</artifactId>
+            <version>4.2.1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
