Implermentation of #191: Support explicit schema configuration.

--- a/rider-core/src/test/resources/config/sample-dbunit.yml
+++ b/rider-core/src/test/resources/config/sample-dbunit.yml
@@ -5,6 +5,7 @@ properties:
   batchedStatements:  true
   caseSensitiveTableNames: false
   qualifiedTableNames: true
+  schema: public
   batchSize: 200
   fetchSize: 200
   allowEmptyFields: true
