--- a/rider-core/src/test/resources/config/sample-dbunit.yml
+++ b/rider-core/src/test/resources/config/sample-dbunit.yml
@@ -14,3 +14,4 @@ properties:
   escapePattern: "[?]"
   datatypeFactory: !!com.github.database.rider.core.configuration.DBUnitConfigTest$MockDataTypeFactory {}
   replacers: [!!com.github.database.rider.core.replacers.CustomReplacer {}]
+  tableType: ["TABLE","VIEW"]
