refs #247 Adds merge datasets strategy

--- a/rider-core/src/test/resources/config/sample-dbunit.yml
+++ b/rider-core/src/test/resources/config/sample-dbunit.yml
@@ -3,6 +3,8 @@ cacheTableNames: false
 leakHunter: true
 raiseExceptionOnCleanUp: true
 expectedDbType: HSQLDB
+dataSetMergingStrategy: CLASS
+caseInsensitiveStrategy: LOWERCASE
 properties:
   batchedStatements:  true
   caseSensitiveTableNames: false
