refs #247 Merge datasets readme and rename of the global property

--- a/rider-core/src/test/resources/config/sample-dbunit.yml
+++ b/rider-core/src/test/resources/config/sample-dbunit.yml
@@ -3,7 +3,7 @@ cacheTableNames: false
 leakHunter: true
 raiseExceptionOnCleanUp: true
 expectedDbType: HSQLDB
-dataSetMergingStrategy: CLASS
+mergingStrategy: CLASS
 caseInsensitiveStrategy: LOWERCASE
 properties:
   batchedStatements:  true
